created prototype tshirt configurator

--- a/Clotheconfig.uproject
+++ b/Clotheconfig.uproject
@@ -2,5 +2,19 @@
 	"FileVersion": 3,
 	"EngineAssociation": "{682E72A8-4E23-D7F5-D5F6-BBBC246BD9F6}",
 	"Category": "",
-	"Description": ""
+	"Description": "",
+	"Plugins": [
+		{
+			"Name": "HDRIBackdrop",
+			"Enabled": true
+		},
+		{
+			"Name": "VariantManager",
+			"Enabled": true
+		},
+		{
+			"Name": "PixelStreaming",
+			"Enabled": true
+		}
+	]
 }
