--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
-
+GameDefaultMap=/Game/Maps/NewMap.NewMap
+GlobalDefaultGameMode=/Game/Blueprints/BP_myGM.BP_myGM_C
+EditorStartupMap=/Game/Maps/NewMap.NewMap
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
